<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Xposed Hider</string>

    <string name="tip_reboot">Module is NOT enabled</string>

    <string name="title_search">Search</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_donate">Donate</string>
    <string name="title_view_system_app">View System APP</string>

    <string name="text_about">This module will hide your Xposed as apparently as possible.</string>
    <string name="text_donate">Click to view WeChat QR code.</string>

    <string name="copyright">Copyright © 2017&#8211;2018 Yaerin All rights reserved.</string>
</resources>
